fix landscape on mobile
dependency: css variable and js

--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
-#bsdy {
-    margin: 0px;
-    width: 100%;
-    height: 100%;
-}
-
 #main-stuff {
+    --alt-vh: 100vh;
+
     position: absolute;
     top: 0;
     left: 0;
@@ -17,7 +13,7 @@
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
-    background-size: calc(min(100vw / 1187, 100vh / 662) * 1187);
+    background-size: calc(min(100vw / 1187, var(--alt-vh) / 662) * 1187);
     background-position: 50%;
     background-color: black;
 }
@@ -28,15 +24,15 @@
     z-index: 1;
     left: 0;
     /* top: 88.5%; */
-    top: calc(min(100vw / 1187, 100vh / 662) * 0.385 * 662 + 50%);
+    top: calc(min(100vw / 1187, var(--alt-vh) / 662) * 0.385 * 662 + 50%);
     width: 100%;
     text-align: center;
     vertical-align: middle;
     font-family: 'Noto Sans TC', sans-serif;
     /* font-size: 36px; */
-    font-size: calc(min(100vw / 1187, 100vh / 662) * 36);
+    font-size: calc(min(100vw / 1187, var(--alt-vh) / 662) * 36);
     /* letter-spacing: 3px; */
-    letter-spacing: calc(min(100vw / 1187, 100vh / 662) * 3);
+    letter-spacing: calc(min(100vw / 1187, var(--alt-vh) / 662) * 3);
     color: white;
 }
 
@@ -51,14 +47,14 @@
     font-family: 'Noto Sans TC', sans-serif;
 
     /* font-size: 36px; */
-    font-size: calc(min(100vw / 1187, 100vh / 662) * 36);
+    font-size: calc(min(100vw / 1187, var(--alt-vh) / 662) * 36);
     /* letter-spacing: 3px; */
-    letter-spacing: calc(min(100vw / 1187, 100vh / 662) * 3);
+    letter-spacing: calc(min(100vw / 1187, var(--alt-vh) / 662) * 3);
 
     /* text-stroke: 5px black;
     -webkit-text-stroke: 5px black; */
-    text-stroke: calc(min(100vw / 1187, 100vh / 662) * 5) black;
-    -webkit-text-stroke: calc(min(100vw / 1187, 100vh / 662) * 5) black;
+    text-stroke: calc(min(100vw / 1187, var(--alt-vh) / 662) * 5) black;
+    -webkit-text-stroke: calc(min(100vw / 1187, var(--alt-vh) / 662) * 5) black;
     
     color: black;
 }
